--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,17 +1,26 @@
 <div class="container mx-auto p-4">
-    <header class="text-center mb-8">
-        <h1 class="text-4xl font-bold">UtilBlogs</h1>
-        <p class="text-lg text-gray-600">Explore engineering blogs from top companies</p>
+    <header class="text-center mb-4">
+        <h1 class="text-4xl font-bold mb-4">UtilBlogs</h1>
+        <p class="text-lg text-gray-600">Explore engineering blogs from top companies.</p>
     </header>
 
     <main>
         <ul class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
-        <li *ngFor="let blog of blogService.getBlogs()" class="card bg-base-100 shadow-xl">
-            <div class="card-body">
-                <h2 class="card-title">{{ blog.name }}</h2>
-                <a href="{{ blog.url }}" target="_blank" class="link link-primary">Visit Blog</a>
-            </div>
-        </li>
+            @for (blog of blogService.getBlogs(); track blog) {
+                <li class="card bg-base-100 shadow-xl">
+                    <div class="card-body">   
+                        <h2 class="card-title">{{ blog.name }}</h2>
+                        <a href="{{ blog.url }}" target="_blank" class="link link-primary">Visit Blog</a>
+                    </div>  
+                </li>
+            } @empty {
+                <li class="card bg-base-100 shadow-xl">
+                    <div class="card-body">
+                        <h2 class="card-title">No Blogs Available</h2>
+                        <p class="text-gray-500">Check back later for updates.</p>
+                    </div>
+                </li>
+            }
         </ul>
     </main>
 </div>
